WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46424
[GTK]
r68199
introduced two test failures
https://bugs.webkit.org/show_bug.cgi?id=46424
Summary
[GTK] r68199 introduced two test failures
Martin Robinson
Reported
2010-09-23 15:58:37 PDT
fast/harness/override-preferences.html and fast/parser/noscript-with-javascript-disabled.html both fail after this commit.
Attachments
Patch for this issue
(2.09 KB, patch)
2010-09-23 16:00 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-09-23 16:00:22 PDT
Created
attachment 68611
[details]
Patch for this issue
Martin Robinson
Comment 2
2010-09-23 16:09:10 PDT
Comment on
attachment 68611
[details]
Patch for this issue Clearing flags on attachment: 68611 Committed
r68211
: <
http://trac.webkit.org/changeset/68211
>
Martin Robinson
Comment 3
2010-09-23 16:09:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug