WebKitTools/DumpRenderTree/gtk/LayoutTestControllerGtk.cpp
@@ -683,8 +683,8 @@ void LayoutTestController::overridePreference(JSStringRef key, JSStringRef value
     if (G_VALUE_HOLDS_STRING(&currentPropertyValue))
         g_object_set(settings, propertyName, valueAsString.get(), NULL);
     else if (G_VALUE_HOLDS_BOOLEAN(&currentPropertyValue))
-        g_object_set(G_OBJECT(settings), propertyName, g_ascii_strcasecmp(valueAsString.get(), "true") 
-                        || g_ascii_strcasecmp(valueAsString.get(), "1"), NULL);
+        g_object_set(G_OBJECT(settings), propertyName, !g_ascii_strcasecmp(valueAsString.get(), "true")
+                        || !g_ascii_strcasecmp(valueAsString.get(), "1"), NULL);
     else if (G_VALUE_HOLDS_INT(&currentPropertyValue))
         g_object_set(G_OBJECT(settings), propertyName, atoi(valueAsString.get()), NULL);
     else if (G_VALUE_HOLDS_FLOAT(&currentPropertyValue)) {
